welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:14: error: not found: value Direction
  while (!isFacingWall() && !isOverBaggle() && (getDirection() == Direction.WEST)) {
                                                                  ^